# BrokenGlasses

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/image_proc/: CropDecimateConfig.h  DebayerConfig.h  RectifyConfig.h
devel/include/imu_3dm_gx4/: FilterOutput.h
devel/include/point_message/: pointMsg.h  statsMsg.h
devel/include/stereo_image_proc/: DisparityConfig.h
devel/lib/image_checker/: image_viewer_node
devel/lib/image_proc/: image_proc
devel/lib/image_rotate/: image_rotate
devel/lib/image_testing/: circle_finder  colorSpaces  color_finder_average  cv_modder  draw_gui  green_finder  heading_predict  horizon_line  hsv_converter  image_converter  image_flipper  image_viewer_node  orange_finder  quad_image  rect_finder  video_modder_node
devel/lib/image_view/: disparity_view  extract_images  image_saver  image_view  stereo_view  video_recorder
devel/lib/imu_3dm_gx4/: imu_3dm_gx4
devel/lib/learn_imu/: quaternion
devel/lib/pkgconfig/: camera_calibration.pc  camera_launches.pc  depth_image_proc.pc  image_checker.pc  image_proc.pc  image_rotate.pc  image_testing.pc  image_view.pc  imu_3dm_gx4.pc  learn_imu.pc  point_message.pc  stereo_image_proc.pc  usb_cam.pc
devel/lib/python2.7/dist-packages/camera_calibration/: __init__.py
devel/lib/python2.7/dist-packages/image_proc/cfg/: CropDecimateConfig.py  DebayerConfig.py  RectifyConfig.py
devel/lib/python2.7/dist-packages/point_message/msg/: __init__.py  _pointMsg.py  _statsMsg.py
devel/lib/python2.7/dist-packages/stereo_image_proc/cfg/: DisparityConfig.py
devel/lib/stereo_image_proc/: stereo_image_proc
devel/lib/usb_cam/: usb_cam_node
devel/share/camera_calibration/cmake/: camera_calibrationConfig.cmake
devel/share/camera_launches/cmake/: camera_launchesConfig.cmake
devel/share/common-lisp/ros/point_message/msg/: _package.lisp  _package_pointMsg.lisp  pointMsg.lisp  point_message-msg.asd
devel/share/depth_image_proc/cmake/: depth_image_procConfig.cmake
devel/share/image_checker/cmake/: image_checkerConfig.cmake
devel/share/image_proc/cmake/: image_procConfig.cmake
devel/share/image_rotate/cmake/: image_rotateConfig.cmake
devel/share/image_testing/cmake/: image_testingConfig.cmake
devel/share/image_view/cmake/: image_viewConfig.cmake
devel/share/imu_3dm_gx4/cmake/: imu_3dm_gx4-msg-extras.cmake  imu_3dm_gx4-msg-paths.cmake  imu_3dm_gx4Config.cmake
devel/share/learn_imu/cmake/: learn_imuConfig.cmake
devel/share/point_message/cmake/: point_message-msg-paths.cmake  point_messageConfig.cmake
devel/share/roseus/ros/imu_3dm_gx4/: manifest.l
devel/share/roseus/ros/imu_3dm_gx4/msg/: FilterOutput.l
devel/share/roseus/ros/point_message/: manifest.l
devel/share/roseus/ros/point_message/msg/: pointMsg.l
devel/share/stereo_image_proc/cmake/: stereo_image_procConfig.cmake
devel/share/usb_cam/cmake/: usb_camConfig.cmake
src/camera_launches/: CMakeLists.txt  gui-circle-color.launch  pg.launch  pg_single.launch
src/image_testing/: CMakeLists.txt  package.xml  paramdata
src/image_testing/libs/: RiptideVision.cpp  RiptideVision.h
src/image_testing/src/: circle_finder.cpp  color_finder_average.cpp  colorspaces.cpp  cv_modder.cpp  draw_gui.cpp  heading_marker.cpp  horizonLine.cpp  hsv_converter.cpp  image_converter.cpp  image_flipper.cpp  image_viewer_node.cpp  line_follow.cpp  orange_finder.cpp  parampicker.cpp  quad_image.cpp  rect_finder.cpp  video_modder_node.cpp
src/point_message/: CMakeLists.txt
src/point_message/msg/: pointMsg.msg
